// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2024";

package com.google.android.as.oss.privateinference.transport.impl;

import "google/protobuf/timestamp.proto";

option java_outer_classname = "TimestampedProxyConfigsOuterClass";
option java_package = "com.google.android.as.oss.privateinference.transport.impl";

message TimestampedProxyConfigs {
  // The proxy configs.
  repeated ProxyConfig proxy_configs = 1;

  // The timestamp when the proxy configs were last updated.
  .google.protobuf.Timestamp last_updated = 2;
}

message ProxyConfig {
  // The proxy URL.
  string url = 1;

  // The proxy port.
  int32 port = 2;
}
